tinybook/tinybook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinybook-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tinybook-service
  template:
    metadata:
      labels:
        app: tinybook-service
    spec:
      containers:
        - name: tinybook
          image: ycvk/tinybook:v0.0.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 128Mi
            requests:
              cpu: "0.5"
              memory: 128Mi
