tinybook/tinybook-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinybook-mongodb
  labels:
    app: tinybook-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinybook-mongodb
  template:
    metadata:
      name: tinybook-mongodb
      labels:
        app: tinybook-mongodb
    spec:
      containers:
        - name: tinybook-mongodb
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongodb
              containerPort: 27017
      restartPolicy: Always
