tinybook/tinybook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinybook-mysql
  labels:
    app: tinybook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinybook-mysql
  template:
    metadata:
      name: tinybook-mysql
      labels:
        app: tinybook-mysql
    spec:
      # 以下配置表示:
      # 服务容器的镜像为bitnami/mysql:8.0，镜像中的容器端口为3306，挂载的存储卷为mysql-storage
      containers:
        - name: tinybook-mysql
          image: bitnami/mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          # 这里的claimName要和tinybook-mysql-pv.yaml中的metadata.name一致
          persistentVolumeClaim:
            claimName: tinybook-mysql-pv-claim
