tinybook/tinybook-etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinybook-etcd
spec:
  selector:
    app: tinybook-etcd
  ports:
    - protocol: TCP
      port: 2381
      targetPort: 2379
      nodePort: 32379
  type: NodePort
