tinybook/tinybook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinybook-mysql
spec:
  selector:
    app: tinybook-mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
