tinybook/tinybook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinybook-service
spec:
  selector:
    app: tinybook-service
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
  type: LoadBalancer
